day2: extract strings as resources and update alignment to center

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Learn Compose</string>
+    <string name="happy_birthday_text">Happy Birthday Bry!</string>
+    <string name="signature_text">From Shell</string>
 </resources>
